# GamepadExplorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/: dependencies_compilation.sh
src/: main.cpp
